--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@ body{
 }
 .cardApropos{
   background-color: #FFF;
-  box-shadow: 5px 5px 20px rgba(128, 128, 128, 0.3);
+  box-shadow: 5px 5px 20px #E8ECFD;
   border-radius: 1rem;
   padding: 2rem 0 4rem 0;
 }
@@ -138,7 +138,7 @@ body{
   border-radius: 2rem;
 }
 .cardContacts{
-  box-shadow: 5px 5px 20px rgba(128, 128, 128, 0.3);
+  box-shadow: 5px 5px 20px #E8ECFD;
 }
 .cardSticker h4{
   font-size: 1.2rem;
@@ -163,7 +163,46 @@ body{
 .cardInput textarea{
   height: 12vh;
 }
-
+.btn-send{
+  background-color: #FF5959;
+  color: #FFF;
+  border-radius: 30px;
+}
+.cadreProject .card-body{
+  position: absolute;
+  visibility: hidden;
+  border-radius: 1rem;
+}
+.cadreProject:hover .card-body{
+  visibility: visible;
+  background-color: #ff5959f3;
+  color: #FFF;
+  height: 100%;
+  width: 100%;
+}
+.cardProjet img{
+  border-radius: 1rem;
+}
+.projetRow{
+  margin: 0 1.5rem;
+}
+.cardProjet{
+  box-shadow: 5px 5px 20px #E8ECFD;
+}
+.serviceCouleurs{
+  width: 100%;
+  background-color: #E8ECFD;
+  height: 4px;
+}
+.serviceFlex{
+  display: flex;
+  justify-content: space-between;
+}
+.serviceCouleurs div{
+  width: 70%;
+  background-color: #FF5959;
+  height: 100%;
+}
 
 @media (max-width: 880px) {
   .menuBurger{
