--- a/src/App.css
+++ b/src/App.css
@@ -171,7 +171,7 @@ body{
 .cadreProject .card-body{
   position: absolute;
   visibility: hidden;
-  border-radius: 1rem;
+  border-radius: 4px;
 }
 .cadreProject:hover .card-body{
   visibility: visible;
@@ -181,7 +181,7 @@ body{
   width: 100%;
 }
 .cardProjet img{
-  border-radius: 1rem;
+  border-radius: 4px;
 }
 .projetRow{
   margin: 0 1.5rem;
@@ -205,11 +205,14 @@ body{
 }
  .hr{
   width: 1px;
-  height: 17vh;
+  height: 16vh;
   border: 1px dashed #FF5959;
 }
-
-
+.hr2{
+  width: 1px;
+  height: 10vh;
+  border: 1px dashed #FF5959;
+}
 
 
 @media (max-width: 880px) {
@@ -217,7 +220,12 @@ body{
     position: relative;
     width: 100%;
   }
-  
+  .cadre .cadreHead{
+    width: 100%;
+  }
+  .cadreMoiHead{
+    width: 100%;
+  }
 }
 @media (max-width: 1860px) {
   .menuBurger{
